# infra

./: .gitmodules  CMakeLists.txt  Config.cmake  README.md
cmake/: CheckLTO.cmake  CommonConfig.cmake  ProjectInfo.cmake
include/common/: assert.hpp  buffer.hpp  iterator_range.hpp  support.hpp
include/infra/: buffer.hpp  catch.hpp  data_stream.hpp  exception.hpp  filesystem.hpp  iterator_range.hpp  json.hpp  json_io.hpp  optional.hpp  stride_iterator.hpp  string_view.hpp  support.hpp  timer.hpp  upptest.hpp  utf8_utils.hpp
test/: CMakeLists.txt  main.cpp
